# AI4C

./: CMakeLists.txt  README.en.md  README.md
LLM4Compiler/: README.md
LLM4Compiler/G2CTrans/: CUDA_C_Agent.py  Global_vars.py  Langchain_LLM.py  README.md  set_env_linux.sh  set_env_mac.sh
LLM4Compiler/G2CTrans/BabelTower/: README.md
LLM4Compiler/G2CTrans/BabelTower/test/: mono_cases.jsonl
LLM4Compiler/VecTrans/: README.md
LLM4Compiler/VecTrans/self-refine/: set_env.sh
LLM4Compiler/VecTrans/self-refine/prompt-lib/: requirements.txt
LLM4Compiler/VecTrans/self-refine/prompt-lib/prompt_lib.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
LLM4Compiler/VecTrans/self-refine/prompt-lib/prompt_lib/backends/: openai_api.py
LLM4Compiler/VecTrans/self-refine/src/vectorizer/: compilerTest.py  run_split.py  task_split_feedback.py  task_split_init.py  task_split_iterate.py
LLM4Compiler/VecTrans/self-refine/test_case/: AllPointsEq.c  s1113.c  s112.c  s114.c  s115.c  s116.c  s1161.c  s1213.c  s123.c  s1244.c  s126.c  s13110.c  s141.c  s161.c  s211.c  s2111.c  s212.c  s221.c  s222.c  s2233.c  s2251.c  s231.c  s232.c  s233.c  s235.c  s241.c  s242.c  s244.c  s256.c  s258.c  s261.c  s275.c  s281.c  s291.c  s292.c  s293.c  s3110.c  s3112.c  s3113.c  s312.c  (+20 more)
aiframe/: CMakeLists.txt  ONNXRunner.cpp  onnxrunner.cpp
aiframe/gcc_plugins/: CMakeLists.txt
aiframe/gcc_plugins/autotune/: CMakeLists.txt  coarse_option_tuning_plugin.cpp  hook.cpp  hook_all_func.cpp  rtl_unroll_autotune_plugin.cpp
aiframe/gcc_plugins/optimize/: ipa_inline_unroll_plugin.cpp  rtl_unroll_opt_plugin.cpp
aiframe/include/: ONNXRunner.h  feature_utils.h  insn-opinit.h  insn_utils.h  insn_utils_aarch64.h  insn_utils_x86_64.h  onnxrunner.h  option_utils.h  option_yaml_utils.h  plugin_utils.h
aiframe_legacy/: CMakeLists.txt  ONNXRunner.cpp
aiframe_legacy/include/: ONNXRunner.h
models/: auto_lto.onnx  block_correction_model.onnx  inline_model.onnx  optimizer.onnx  unroll_model.onnx
python/: README.md  setup.py
python/ai4c/autotuner/: hook.cdef  hook_all_func.cdef  main.py  tuner.py  utils.py
python/ai4c/autotuner/yaml/: coarse_options.yaml
python/ai4c/optimizer/: main.py
python/ai4c/option_tuner/: measure.py  mytuner.py  search.py  utils.py  xgboost_cost_model.py
python/ai4c/option_tuner/input/: config_measure.yaml  options.yaml  options_lib.yaml
python/docs/: autotuner.md  gcc-opt.md
python/test/: README.md  test.py
python/test/autotuner/coarse_tuning/: run_autotuner.sh  search_space.yaml  test_coarse_tuning.cc  test_coarse_tuning.ini
python/test/autotuner/loop_unroll/: run_autotuner.sh  run_tuner.sh  search_space.yaml  test_unroll.cc  test_unroll.ini
python/test/optimizer/block_correction/: block_correction_plugin.cpp  run_block_correction.sh  test.c
python/test/option_tuner/: run_option_tuner.sh  run_test.sh
